                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 26-02-2006 changed: updated rar libs to latest version (3.5.4) (also removed guilib dependencies)
 - 26-02-2006 added: overlay to indicate that a movie is unwatched in database views (overlayunwatched.png).
 - 26-02-2006 fixed: xbmsp:// -> xbms:// in the network source dialog.
 - 26-02-2006 fixed: Default interlaced and output to all speakers settings weren't saved.
 - 26-02-2006 fixed: Buttonscroller shadow and text colours didn't allow alpha values.
 - 26-02-2006 changed: Removed <keepaspectratio> setting and added <aspectratio> setting to image, multiimage and thumbnailpanel controls.
 - 26-02-2006 fixed: GUI resolution setting wasn't selecting the correct item.
 - 26-02-2006 fixed: Item highlight in My Videos was unpredictable when first opening shares from root.
 - 25-02-2006 changed: Output to all speakers is now saved per file for videos.
 - 25-02-2006 fixed: More valid chars added to the FatX renamer.
 - 25-02-2006 fixed: some codec's (mostly mine :)) showed excessive 00's in duration.
 - 25-02-2006 added: rss reader now supports non-http sources (local/smb/ccx etc).
 - 25-02-2006 fixed: overlay state wasn't updated when trainer settings changed.
 - 25-02-2006 added: Support for Overlay icons over the top of thumbnails.  Currently supported are: OverlayZip.png, OverlayRar.png, OverlayHasTrainer.png, OverlayLocked.png, OverlayTrained.png.
 - 24-02-2006 fixed: Video window would crash if slid off screen in an animation.
 - 24-02-2006 changed: Embedded WMA images that were classified as "Other" rather than "Front Cover" are now included as thumbs.
 - 24-02-2006 fixed: Control focus irregularities in Settings categories.