@@ -30,7 +30,8 @@ IDirectory* CFactoryDirectory::Create(const CStdString& strPath)
 {
   CURL url(strPath);
 
-  IFileDirectory* pDir=CFactoryFileDirectory::Create(strPath);
+  CFileItem item;
+  IFileDirectory* pDir=CFactoryFileDirectory::Create(strPath, &item);
   if (pDir)
     return pDir;
 
