@@ -3,8 +3,8 @@
 #include "../util.h"
 #include "factoryfiledirectory.h"
 #include "oggfiledirectory.h"
-//#include "rardirectory.h"
-//#include "zipdirectory.h"
+#include "rardirectory.h"
+#include "zipdirectory.h"
 #include "nsffiledirectory.h"
 #include "sidfiledirectory.h"
 
@@ -15,8 +15,8 @@ CFactoryFileDirectory::CFactoryFileDirectory(void)
 CFactoryFileDirectory::~CFactoryFileDirectory(void)
 {}
 
-//IFileDirectory* CFactoryFileDirectory::Create(const CStdString& strPath, CFileItem* pItem, const CStdString& strMask )
-IFileDirectory* CFactoryFileDirectory::Create(const CStdString& strPath )
+// return NULL + set pItem->m_bIsFolder to remove it completely from list.
+IFileDirectory* CFactoryFileDirectory::Create(const CStdString& strPath, CFileItem* pItem, const CStdString& strMask)
 {
   CStdString strExtension=CUtil::GetExtension(strPath);
   strExtension.MakeLower();
@@ -53,113 +53,82 @@ IFileDirectory* CFactoryFileDirectory::Create(const CStdString& strPath )
     delete pDir;
     return NULL;
   }
-  /*if (strExtension.Equals(".rar") && g_guiSettings.GetBool("VideoFiles.HandleArchives"))
+  if (strExtension.Equals(".zip"))
   {
-    std::vector<CStdString> token;
-    CStdString strLower = strPath;
-    strLower.ToLower();
-    CUtil::Tokenize(strPath,token,".");
-    if (token.size() > 2)
-      if (token[token.size()-2].Left(4) == "part")
+    CStdString strUrl; strUrl.Format("zip://Z:\\,2,,%s,\\",strPath.c_str());
+    CFileItemList item;
+    CGUIViewState* guiState = CGUIViewState::GetViewState(0,item);
+    if (guiState)
+    {
+      bool bState = guiState->UnrollArchives();
+      delete guiState;
+      guiState = NULL;
+      if (!bState)
       {
-        int size = token[token.size()-2].size();
-        int i = atoi(token[token.size()-2].Mid(4,size-4).c_str());
-        if (atoi(token[token.size()-2].Mid(4,size-4).c_str()) != 1)
-         {
+        pItem->m_strPath = strUrl;
+        return new CZipDirectory;
+      }
+    }
+
+    if (g_ZipManager.HasMultipleEntries(strPath))
+    {
+      pItem->m_strPath = strUrl;
+      return new CZipDirectory;
+    }
+
+    item.Clear();
+    CDirectory dir; dir.GetDirectory(strUrl,item,strMask);
+    if (item.Size())
+      *pItem = *item[0];
+    else
+      pItem->m_bIsFolder = true;
+
+    return NULL;
+  }
+  if (strExtension.Equals(".rar"))
+  {
+    CStdString strUrl; strUrl.Format("rar://Z:\\,2,,%s,\\",strPath.c_str());
+    std::vector<CStdString> tokens;
+    CUtil::Tokenize(strPath,tokens,".");
+    if (tokens.size() > 2)
+    {
+      CStdString token = tokens[tokens.size()-2];
+      if (token.Left(4).CompareNoCase("part") == 0) // only list '.part01.rar'
+        if (atoi(token.substr(4).c_str()) > 1)
+        {
           pItem->m_bIsFolder = true;
           return NULL;
         }
-      }
-    CFileItemList items;
-    IFileDirectory* pDir = new CRarDirectory();
-    pDir->SetMask(strMask);
-    CStdString strUrl;
-    CUtil::CreateRarPath(strUrl,strPath,"");
-    pDir->GetDirectory(strUrl,items);
-    
-    if (items.Size() > 1)
-    {
-      return pDir;
     }
 
-    delete pDir;
-
-    if (items.Size() == 1)
+    CFileItemList item;
+    CGUIViewState* guiState = CGUIViewState::GetViewState(0,item);
+    if (guiState)
     {
-      if (items[0]->IsRAR())
+      bool bState = guiState->UnrollArchives();
+      delete guiState;
+      guiState = NULL;
+      if (!bState)
       {
-        CRarDirectory* pDir2 = new CRarDirectory();
-        pDir2->SetMask(strMask);
-        CStdString strPath2;
-        CUtil::CreateRarPath(strPath2,strUrl,"");
-        if (!pDir2->ContainsFiles(strPath2))
-          pItem->m_bIsFolder = true;
-        
-        delete pDir2;
+        pItem->m_strPath = strUrl;
+        return new CRarDirectory;
       }
-      else if (items[0]->IsZIP())
-      {
-        CZipDirectory* pDir2 = new CZipDirectory();
-        pDir2->SetMask(strMask);
-        CStdString strPath2;
-        strPath2.Format("zip://Z:\\,2,,%s,\\",strUrl.c_str());
-        if (!pDir2->ContainsFiles(strPath2))
-          pItem->m_bIsFolder = true;
-        
-        delete pDir2;
-      }
-      else if (!pItem->m_bIsFolder)
-        *pItem = *items[0];
     }
+
+    if (g_RarManager.HasMultipleEntries(strPath))
+    {
+      pItem->m_strPath = strUrl;
+      return new CRarDirectory;
+    }
+
+    CDirectory dir; dir.GetDirectory(strUrl,item,strMask);
+    if (item.Size())
+      *pItem = *item[0];
     else
-      pItem->m_bIsFolder = true; // no files no dirs
+      pItem->m_bIsFolder = true;
+
+    return NULL;
   }
-  if (strExtension.Equals(".zip") && g_guiSettings.GetBool("VideoFiles.HandleArchives"))
-  {
-    CFileItemList items;
-    IFileDirectory* pDir = new CZipDirectory();
-    pDir->SetMask(strMask);
-    CStdString strUrl;
-    strUrl.Format("zip://Z:\\,2,,%s,\\",strPath.c_str());
-    pDir->GetDirectory(strUrl,items);
 
-    if (items.Size() > 1)
-    {
-      return pDir;
-    }
-
-    delete pDir;
-
-    if (items.Size() == 1)
-    {
-      if (items[0]->IsRAR())
-      {
-        CRarDirectory* pDir2 = new CRarDirectory();
-        pDir2->SetMask(strMask);
-        CStdString strPath2;
-        CUtil::CreateRarPath(strPath2,strUrl,"");
-        if (!pDir2->ContainsFiles(strPath2))
-          pItem->m_bIsFolder = true;
-        
-        delete pDir2;
-      }
-      else if (items[0]->IsZIP())
-      {
-        CZipDirectory* pDir2 = new CZipDirectory();
-        pDir2->SetMask(strMask);
-        CStdString strPath2;
-        strPath2.Format("zip://Z:\\,2,,%s,\\",strUrl.c_str());
-        if (!pDir2->ContainsFiles(strPath2))
-          pItem->m_bIsFolder = true;
-        
-        delete pDir2;
-      }
-      else if (!pItem->m_bIsFolder)
-        *pItem = *items[0];
-    }
-    else
-      pItem->m_bIsFolder = true; // no files no dirs
-  }
-*/
   return NULL;
 }
