@@ -1,15 +1,16 @@
 #pragma once
 
-#include "idirectory.h"
+#include "ifiledirectory.h"
 #include "ZipManager.h"
 
 namespace DIRECTORY 
 {
-  class CZipDirectory : public IDirectory
+  class CZipDirectory : public IFileDirectory
   {
   public:
     CZipDirectory();
     ~CZipDirectory();
     virtual bool GetDirectory(const CStdString& strPath, CFileItemList& items);
+    virtual bool ContainsFiles(const CStdString& strPath);
   };
 }
