@@ -246,7 +246,9 @@ public:
   static bool IsVirtualPath(const CStdString& strFile);
   static bool IsStack(const CStdString& strFile);
   static bool IsRAR(const CStdString& strFile);
+  static bool IsInRAR(const CStdString& strFile);
   static bool IsZIP(const CStdString& strFile);
+  static bool IsInZIP(const CStdString& strFile);
   static bool IsCDDA(const CStdString& strFile);
   static void GetFileAndProtocol(const CStdString& strURL, CStdString& strDir);
   static void RemoveCRLF(CStdString& strLine);
